Start building components of the page

--- a/app/scripts/main.jade
+++ b/app/scripts/main.jade
@@ -1,2 +1,7 @@
 
-div this is main content
+page-head(title='This is Title', left-ico='icon-MainMenu', right-ico='icon-Location')
+  icon-title(icon='icon-Bulb')
+page-body(name='Name in the list', left-ico='icon-calendar', status='OK', goto-url='/contrl/action')
+
+p
+  div this is main content
