--- a/app/index.jade
+++ b/app/index.jade
@@ -48,11 +48,14 @@ html.no-js
 
   body(ng-app='glApp')
 
-    // Add your site or application content here 
-
+    // Add site or application content here
+    section#pt-page.container.pt-perspective(ng-controller='AppCtrl')
+      .main-content.row
+        .row
+          .col-sm-12(ng-view='')
 
     //[if lt IE 9]><![endif]
-  
+
     // build:js scripts/vendor.js 
     // bower:js 
     // endbower 
