--- a/app/scripts/main.jade
+++ b/app/scripts/main.jade
@@ -1,7 +1,8 @@
 
 page-head(title='This is Title', left-ico='icon-MainMenu', right-ico='icon-Location')
   icon-title(icon='icon-Bulb')
-page-body(name='Name in the list', left-ico='icon-calendar', status='OK', goto-url='/contrl/action')
+page-body(name='Name in the list 1', left-ico='icon-calendar', status='OK', goto-url='/contrl/action')
+page-body(name='Name in the list 2', left-ico='icon-Phone', status='Ready', goto-url='/contrl/action')
 
 p
   div this is main content
