--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -224,6 +224,28 @@ div.pt-page {
     &.bgRed {
         background-color: #EE5567;
     }
+    &.mainmenu {
+        background-color: #303131;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+
+            li {
+                cursor: pointer;
+                display: list-item;
+                font-size: 20px;
+                padding: 20px 0;
+                text-align: center;
+
+                a {
+                    color: #ff8c00;
+                    text-decoration: none;
+                }
+            }
+        }
+    }
     &.tallHeader {
         @media only screen and (min-height: 400px) { // only if screen higher than 400px only use taller header
             div.header {
@@ -270,26 +292,38 @@ div.pt-page {
     //z-index: 9999;
 }
 
-.nofx.ng-leave {
-    transition: opacity 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000);
-}
-.nofx.ng-enter {
-    transition: opacity 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000);
-}
-.slide.ng-leave {
+$nofx: nofx 400ms ease both;
+
+.slide.ng-leave, .one-slide.ng-leave {
     -webkit-animation: moveToLeft 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000) both;
     z-index: 9999;
 }
-.slide.ng-enter {
+.slide.ng-enter, .one-slide.ng-enter {
     -webkit-animation: moveFromRight 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000) both;
 }
+.singleFx { // this mean no fx apply to the page
+    .slide.ng-leave, .slide.ng-enter {
+        -webkit-animation: $nofx;
+    }
+}
 .back {
-    .slide.ng-leave {
+    .slide.ng-leave, .one-slide.ng-leave {
         -webkit-animation: moveToRight 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000) both;
         z-index: 9999;
     }
-    .slide.ng-enter {
+    .slide.ng-enter, .one-slide.ng-enter {
         -webkit-animation: moveFromLeft 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000) both;
+    }
+    .one-slide.ng-leave, .one-slide.ng-enter {
+        z-index: 9999;
+    }
+
+    &.singleFx { // this mean no fx apply to the page
+        .slide.ng-leave, .slide.ng-enter {
+            -webkit-animation: $nofx;
+        }
+        .slide.ng-leave {
+        }
     }
 }
 
@@ -300,6 +334,15 @@ div.pt-page {
     -webkit-animation: moveFromRight 400ms cubic-bezier(0.230, 0.635, 0.355, 1.000) both;
 }
 
+// dummy fading animation for no fx
+@-webkit-keyframes nofx {
+    99% {
+        opacity: .9;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 // rotate left (forward)
 @-webkit-keyframes rotateCubeLeftOut {
     50% {
