--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -80,6 +80,30 @@ body {
 }
 
 /*
+ * Network connectivity
+ */
+#status-summary {
+    width: 100%;
+    height: 3px;
+    position: fixed;
+    z-index: 1000;
+    background-color: gray;
+
+    .row {
+        div {
+            height: 3px;
+        }
+
+        .on {
+            background-color: #3DB094;
+        }
+        .off {
+            background-color: #d74352;
+        }
+    }
+}
+
+/*
  * Page transition setup.
  */
 .pt-perspective {
