--- a/app/index.jade
+++ b/app/index.jade
@@ -49,11 +49,11 @@ html.no-js
   body(ng-app='glApp')
 
     // Add site or application content here
-    #status-summary(connectivity)
-      internet-status(column=4)
-      cloud-status(column=4)
-      hardware-status(column=4)
     #pt-main.container(ng-controller='AppCtrl', class='pt-perspective {{backFxClass}} {{singleFx}}')
+      #status-summary(connectivity, ng-hide='hideStatus')
+        internet-status(column=4)
+        cloud-status(column=4)
+        hardware-status(column=4)
       .pt-page.row(ui-view, class='{{pageFxClass}}')
 
     //[if lt IE 9]><![endif]
