--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,7 +102,7 @@ $summarySttHeight: 3px;
     width: 100%;
     height: $summarySttHeight;
     position: fixed;
-    z-index: 1000;
+    z-index: 10000;
     background-color: gray;
 
     .row {
@@ -145,6 +145,7 @@ $summarySttHeight: 3px;
         //    @include position(0, 0);
         //    @include abs;
         overflow: hidden;
+        transition: background-color 1s ease;
         -webkit-backface-visibility: hidden;
         -webkit-transform: translate3d(0, 0, 0);
         -webkit-transform-style: preserve-3d;
