--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -145,7 +145,7 @@ $summarySttHeight: 3px;
         //    @include position(0, 0);
         //    @include abs;
         overflow: hidden;
-        transition: background-color 1s ease;
+        //transition: background-color 1s ease;
         -webkit-backface-visibility: hidden;
         -webkit-transform: translate3d(0, 0, 0);
         -webkit-transform-style: preserve-3d;
@@ -180,6 +180,7 @@ $headerHeight: 60px;
 $pageIconHeight: 40px;
 $tallHeaderHeight: 100px;
 $tabHeight: 87px;
+$alarmToolbarHeight: 66px;
 div.pt-page {
     /*
      * Page Header
@@ -309,7 +310,13 @@ div.pt-page {
     /*
      * Overwrite classes
      */
-    &.bgRed {
+    &.armed {
+        background-color: #43AF94;
+    }
+    &.disarmed {
+        background-color: #F96F57;
+    }
+    &.emergency {
         background-color: #EE5567;
     }
     &.mainmenu {
@@ -379,11 +386,178 @@ div.pt-page {
             }
         }
     }
+    &.uiAlarmToolbar {
+        div.bodyWrap {
+            bottom: $alarmToolbarHeight + 1px;
+        }
+    }
+    &.blurPage {
+        -webkit-filter: blur(5px);
+    }
 }
 div.pt-page.ui-pageIcon.ui-tabs {
     @media only screen and (min-height: 400px) { // only if screen higher than 400px only use taller header
         div.bodyWrap {
             top: $headerHeight + $pageIconHeight + $tabHeight;
+        }
+    }
+}
+
+/*
+ * Alarm Toolbar
+ */
+$buttonDimen: 70px;
+$buttonBorder: 2px;
+.alarmToolbar {
+    width: 100%;
+    position: fixed;
+    //@include dimenPos(100%, null, fixed);
+    bottom: 0;
+    padding-top: 2px;
+    background-color: rgba(50, 50, 50, .5);
+    z-index: 10000;
+    -webkit-transition: top 300ms, background 300ms;
+    
+    .status {
+        min-height: 66px;
+
+        .icon {
+            margin-top: 17px;
+        }
+        .curArmStatus {
+            margin-top: 11px;
+        }
+        .description {
+            font-size: 0.65em;
+        }
+        .rightCol {
+            $margin: 5px;
+            $totalMargin: $margin * 2;
+            padding-left: 0;
+            padding-right: 8px;
+
+            div {
+                width: $alarmToolbarHeight - $totalMargin;
+                height: $alarmToolbarHeight - $totalMargin;
+                //@include dimen($dimen, $dimen);
+                margin: $margin 0;
+                float: right;
+                line-height: $alarmToolbarHeight - $totalMargin - 2;
+            }
+            .armButton {
+                font-size: 0.8em;
+                font-weight: bold;
+                text-align: center;
+                border: 1px solid #fff;
+                border-radius: ($alarmToolbarHeight - $totalMargin) / 2;
+            }
+            .armIcon {
+                font-size: 28px;
+            }
+        }
+    }
+    &.keypadPage {
+        top: 0;
+    }
+    &.armed .passcode {
+        .digits table div {
+            background-color: rgba(152, 255, 152, 0.66);
+        }
+        .keypad .col .passcodeButton {
+            border-color: rgba(152, 255, 152, 0.66);
+
+            &.onTap {
+                background-color: rgba(152, 255, 152, 0.66);
+            }
+        }
+    }
+    &.disarmed .passcode {
+        .digits table div {
+            background-color: rgba(249, 111, 87, 0.66);
+        }
+        .keypad .col .passcodeButton {
+            border-color: rgba(249, 111, 87, 0.66);
+
+            &.onTap {
+                background-color: rgba(249, 111, 87, 0.66);
+            }
+        }
+    }
+    &.emergency .passcode {
+        .digits table div {
+            background-color: rgba(255, 152, 152, 0.66);
+        }
+        .keypad .col .passcodeButton {
+            border-color: rgba(255, 152, 152, 0.66);
+
+            &.onTap {
+                background-color: rgba(255, 152, 152, 0.66);
+            }
+        }
+    }
+
+    /*
+     * Passcode Page
+     */
+    .passcode {
+        .row {
+            margin: 15px auto;
+        }
+
+        .digits {
+            .txt {
+                margin: 3px 0;
+                font-weight: bold;
+                font-size: .9em;
+                text-align: center;
+            }
+            table {
+                margin: auto;
+                height: 22px;
+
+                div {
+                    width: 10px;
+                    height: 10px;
+                    //@include dimen(10px, 10px);
+                    border-radius: 5px;
+                    margin: 5px;
+                    background-color: rgba(255, 255, 255, 0.66);
+                    float: left;
+                }
+            }
+        }
+
+        .keypad {
+            width: 270px;
+            padding-right: 7px;
+
+            .col {
+                padding: 0;
+
+                .passcodeButton {
+                    width: $buttonDimen;
+                    height: $buttonDimen;
+                    //@include dimen($dimen, $dimen);
+                    text-align: center;
+                    border: $buttonBorder solid rgba(255, 255, 255, 0.66);
+                    color: rgba(255, 255, 255, 0.8);
+                    margin: 15px;
+                    font-size: 1.5em;
+                    font-weight: bold;
+                    line-height: $buttonDimen - $buttonBorder;
+                    border-radius: $buttonDimen / 2;
+
+                    &.onTap {
+                        background-color: rgba(255, 255, 255, 0.66);
+                    }
+                }
+                .ok, .cancel {
+                    text-align: center;
+                    font-size: .8em;
+                    font-weight: bold;
+                    line-height: $buttonDimen;
+                }
+            }
         }
     }
 }
