--- a/app/index.jade
+++ b/app/index.jade
@@ -54,6 +54,11 @@ html.no-js
         internet-status(column=4)
         cloud-status(column=4)
         hardware-status(column=4)
+      notification.fullpage.row
+        div.connectivity(connectivity)
+          internet-status(column=4)
+          cloud-status(column=4)
+          hardware-status(column=4)
       .pt-page.row(ui-view, ng-class='{ uiAlarmToolbar:toolbar, blurPage:showKeypad }', class='{{pageFxClass}}')
       .row
         alarm-toolbar.alarmToolbar.col-xs-12(ng-show='toolbar', ng-class='alarmStatus')
@@ -79,7 +84,7 @@ html.no-js
     
     script(type='text/ng-template', id='3_dashboard')
       .pt-page.ui-pageIcon.lgRow(ng-class='alarmStatus')
-        .header(page-head)
+        .header(page-head, hm-swipe-down='swipeDown()')
           icon-title
         div.bodyWrap(page-body)
       input(type='number', ng-model='zones', value='2')
@@ -87,10 +92,10 @@ html.no-js
 
     script(type='text/ng-template', id='4_alarm-page')
       .pt-page.ui-pageIcon.ui-tabs(ng-class='alarmStatus')
-        .header(page-head)
+        .header(page-head, hm-swipe-down='swipeDown()')
           icon-title
         div(page-tab)
-        div(ui-view, class='bodyWrap {{pageFxClass}}', ng-swipe-left='swipe(1)', ng-swipe-right='swipe(2)')
+        div(ui-view, class='bodyWrap {{pageFxClass}}', hm-swipe-left='swipe(1)', hm-swipe-right='swipe(2)')
     script(type='text/ng-template', id='4.1_zones-page')
       div(page-body)
     script(type='text/ng-template', id='4.2_system-page')
