--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -106,8 +106,12 @@ $summarySttHeight: 3px;
     background-color: gray;
 
     .row {
-        div {
+        .wrapper {
             height: $summarySttHeight;
+            
+            .visual {
+                display: none;
+            }
         }
 
         .on {
@@ -122,6 +126,79 @@ $summarySttHeight: 3px;
             @include animation(disabledHandler, 800ms, null, null, 800ms, 5);
             background-color: $dis;
         }
+    }
+}
+$bg: #232424;
+.fullpage {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 9999;
+    background-color: rgba(150,150,150,.5);
+
+    .connectivity {
+        width: 100%;
+        //@include dimenPos(100%, $height);
+        //@include position($summarySttHeight, 0);
+        border: 0 solid #4a4b53;
+        border-bottom-width: 2px;
+        margin: auto;
+        background-color: $bg;
+        padding: 0 15px 12px;
+    }
+
+    .on, .off, .dis {
+        opacity: .18;
+
+        .text {
+            font-size: .8em;
+            padding: 6px 0;
+        }
+        .status {
+            width: 50px;
+            height: 50px;
+            position: relative;
+            margin: auto;
+            padding: 0;
+            border: 1px solid white;
+            //@include dimenPos(50px, 50px, relative);
+            //@include boxModel(auto, 0, 1px solid white);
+            border-radius: 30px;
+
+            .ico {
+                width: 100%;
+                height: 100%;
+                //@include dimenPos();
+                font-size: .8em;
+                line-height: 2.4em;
+                background-color: $bg;
+                border: 4px solid transparent;
+                border-radius: 30px;
+            }
+        }
+    }
+
+    .on, .off {
+        @extend .dis;
+        opacity: 1;
+    }
+    .on .text {
+        color: #3DB094;
+    }
+    .on .status {
+        border-color: #3DB094;
+        color: $bg;
+    }
+    .off .text {
+        color: #d74352;
+    }
+    .off .status {
+        border-color: #d74352;
+        color: $bg;
+    }
+    .on .status .ico, .off .status .ico {
+        background-color: white;
+        border-color: $bg;
     }
 }
 
