finalize notification page and separate it as single directive file

--- a/app/index.jade
+++ b/app/index.jade
@@ -54,7 +54,7 @@ html.no-js
         internet-status(column=4)
         cloud-status(column=4)
         hardware-status(column=4)
-      notification.fullpage.row
+      notification.fullpage(hm-swipe-up='swipeUp()')
         div.connectivity(connectivity)
           internet-status(column=4)
           cloud-status(column=4)
