--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -102,7 +102,8 @@ $summarySttHeight: 3px;
     width: 100%;
     height: $summarySttHeight;
     position: fixed;
-    z-index: 10000;
+    margin-left: -15px;
+    z-index: 12000;
     background-color: gray;
 
     .row {
@@ -112,19 +113,18 @@ $summarySttHeight: 3px;
             .visual {
                 display: none;
             }
-        }
-
-        .on {
-            @include animation(onlineHandler, 800ms, null, null, 800ms, 5);
-            background-color: $on;
-        }
-        .off {
-            @include animation(offlineHandler, 800ms, null, null, 800ms, 5);
-            background-color: $off;
-        }
-        .dis {
-            @include animation(disabledHandler, 800ms, null, null, 800ms, 5);
-            background-color: $dis;
+            &.on {
+                @include animation(onlineHandler, 800ms, null, null, 800ms, 5);
+                background-color: $on;
+            }
+            &.off {
+                @include animation(offlineHandler, 800ms, null, null, 800ms, 5);
+                background-color: $off;
+            }
+            &.dis {
+                @include animation(disabledHandler, 800ms, null, null, 800ms, 5);
+                background-color: $dis;
+            }
         }
     }
 }
@@ -133,8 +133,9 @@ $bg: #232424;
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 9999;
+    z-index: 11000;
     background-color: rgba(150,150,150,.5);
+    -webkit-transition: bottom 400ms cubic-bezier(0.680, -0.550, 0.265, 1.550), background 300ms;
 
     .connectivity {
         width: 100%;
@@ -142,13 +143,13 @@ $bg: #232424;
         //@include position($summarySttHeight, 0);
         border: 0 solid #4a4b53;
         border-bottom-width: 2px;
-        margin: auto;
+        margin: -70px auto 0; // 30px for transition bounce down more
         background-color: $bg;
-        padding: 0 15px 12px;
+        padding: 70px 15px 12px;
     }
 
-    .on, .off, .dis {
-        opacity: .18;
+    .wrapper {
+        opacity: .3;
 
         .text {
             font-size: .8em;
@@ -170,35 +171,39 @@ $bg: #232424;
                 height: 100%;
                 //@include dimenPos();
                 font-size: .8em;
-                line-height: 2.4em;
+                line-height: 40px;
                 background-color: $bg;
                 border: 4px solid transparent;
                 border-radius: 30px;
             }
         }
-    }
+        &.on, &.off {
+            opacity: 1;
 
-    .on, .off {
-        @extend .dis;
-        opacity: 1;
-    }
-    .on .text {
-        color: #3DB094;
-    }
-    .on .status {
-        border-color: #3DB094;
-        color: $bg;
-    }
-    .off .text {
-        color: #d74352;
-    }
-    .off .status {
-        border-color: #d74352;
-        color: $bg;
-    }
-    .on .status .ico, .off .status .ico {
-        background-color: white;
-        border-color: $bg;
+            .status .ico {
+                background-color: white;
+                border-color: $bg;
+            }
+        }
+        &.on {
+            .text {
+                color: #3DB094;
+            }
+            .status {
+                border-color: #3DB094;
+                color: $bg;
+            }
+        }
+        &.off {
+            .text {
+                color: #d74352;
+            }
+            .status {
+                border-color: #d74352;
+                color: $bg;
+            }
+        }
+
     }
 }
 
