--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,8 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+@import 'base';
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
@@ -21,11 +23,9 @@ textarea {
     color: #222;
 }
 body {
+    @include font(1.8em, #fff, 1.4em, null, null);
     font-family: 'UltraLight',Sans-Serif;
     background: #727271;
-    color: #fff;
-    font-size: 1.8em;
-    line-height: 1.4em;
     overflow: auto;
     overflow-x: hidden;
 
@@ -49,9 +49,7 @@ body {
      * Remove default fieldset styles.
      */
     fieldset {
-        border: 0;
-        margin: 0;
-        padding: 0;
+        @include boxModel(0, 0, 0);
     }
 
     /*
@@ -65,9 +63,6 @@ body {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-@mixin animation ($name, $duration:null, $easing:null, $fillMode:null, $delay:null, $count:null, $direction:null) {
-    -webkit-animation: $name $duration $easing $fillMode $delay $count $direction;
-}
 @mixin changeBgColor ($classname, $from, $to) {
     @-webkit-keyframes #{$classname} {
         from { background: $from; }
@@ -75,16 +70,12 @@ body {
     }
 }
 @mixin line ($height:5px, $marginBottom:0) {
-    width: 25px;
-    height: $height;
+    @include dimenBox(25px, $height, 0 auto $marginBottom);
     border-bottom: 1px solid #767676;
-    margin: 0 auto $marginBottom;
 }
 
 @font-face {
-    font-family: 'UltraLight';
-    font-style: normal;
-    font-weight: 100;
+    @include fontStyle(100, normal, 'UltraLight');
     src: local('Helvetica Neue UltraLight'), local('Helvetica-Neue-UltraLight'), url(../fonts/HelveticaNeue-UltraLight.woff) format('woff');
 }
 
@@ -99,9 +90,7 @@ $summarySttHeight: 3px;
 @include changeBgColor(offlineHandler, #ccc, $off);
 @include changeBgColor(disabledHandler, #ccc, $dis);
 #status-summary {
-    width: 100%;
-    height: $summarySttHeight;
-    position: fixed;
+    @include dimenPos(100%, $summarySttHeight, fixed);
     margin-left: -15px;
     z-index: 12000;
     background-color: gray;
@@ -129,23 +118,17 @@ $summarySttHeight: 3px;
     }
 }
 $bg: #232424;
+$pageOffset: 70px; // 70px for transition bounce down more
 .fullpage {
-    width: 100%;
-    height: 100%;
-    position: fixed;
+    @include dimenPos(100%, 100%, fixed);
     z-index: 11000;
     background-color: rgba(150,150,150,.5);
     -webkit-transition: bottom 400ms cubic-bezier(0.680, -0.550, 0.265, 1.550), background 300ms;
 
     .connectivity {
-        width: 100%;
-        //@include dimenPos(100%, $height);
-        //@include position($summarySttHeight, 0);
-        border: 0 solid #4a4b53;
+        @include dimenBox(100%, null, -$pageOffset auto 0, $pageOffset 15px 12px, 0 solid #4a4b53);
         border-bottom-width: 2px;
-        margin: -70px auto 0; // 30px for transition bounce down more
         background-color: $bg;
-        padding: 70px 15px 12px;
     }
 
     .wrapper {
@@ -156,25 +139,14 @@ $bg: #232424;
             padding: 6px 0;
         }
         .status {
-            width: 50px;
-            height: 50px;
-            position: relative;
-            margin: auto;
-            padding: 0;
-            border: 1px solid white;
-            //@include dimenPos(50px, 50px, relative);
-            //@include boxModel(auto, 0, 1px solid white);
+            @include dimenPosBox(50px, 50px, relative, auto, 0, 1px solid white);
             border-radius: 30px;
 
             .ico {
-                width: 100%;
-                height: 100%;
-                //@include dimenPos();
-                font-size: .8em;
-                line-height: 40px;
+                @include dimen();
+                @include font(.8em, null, 40px);
+                @include border(4px solid transparent, 30px);
                 background-color: $bg;
-                border: 4px solid transparent;
-                border-radius: 30px;
             }
         }
         &.on, &.off {
