--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -183,21 +183,12 @@ $pageOffset: 70px; // 70px for transition bounce down more
  * Page transition setup.
  */
 .pt-perspective {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    //@include dimenPos(100%, 100%, relative);
+    @include dimenPos(100%, 100%, relative);
     -webkit-perspective: 1200px;
 
     .pt-page {
-        width: 100%;
-        height: 100%;
-        bottom: 0;
-        top: 0;
-        position: absolute;
+        @include dimenPosition(100%, 100%, absolute, 0, null, 0);
         //    @include dimen(100%, null, null, $minHeight);
-        //    @include position(0, 0);
-        //    @include abs;
         overflow: hidden;
         //transition: background-color 1s ease;
         -webkit-backface-visibility: hidden;
@@ -212,10 +203,10 @@ $pageOffset: 70px; // 70px for transition bounce down more
         }
 
         .pt-tab {
-            position: relative;
-            width: 100%;
+            @include dimenPos(100%, null, relative);
         }
-        &.bg {
+        .login-bg {
+            @include dimenPos();
             background: transparent center top no-repeat;
             background-size: cover;
             background-image: url(http://ppcdn.500px.org/71209573/18609455467a7f22c76b0c89f041b7ade2165073/2048.jpg);
@@ -238,21 +229,38 @@ $pageOffset: 70px; // 70px for transition bounce down more
 .pt-page {
     $height: 45px;
 
+    div.logo {
+        @include dimenPos(210px, 280px);
+        @include position(0, 10px, 10px);
+        margin: auto;
+        padding: 15px;
+    }
     div.authOptions {
-        opacity: 0;
+        @include dimenPos(320px, 313px);
+        @include position(0, 0, 0, 0);
+        margin: auto;
+        padding: 15px;
+        opacity: 1;
         -webkit-transition: -webkit-filter 2s, opacity 1s;
 
         div.withServices {
-            margin-top: 20px;
+            max-width: 300px;
+            margin: 20px auto;
 
             .inputWrap {
+                margin-bottom: 12px;
+                height: $height;
+
+                div {
+                    float: left;
+                }
                 .icon {
-                    font-size: 10px;
-                    line-height: 23px;
+                    @include dimen($height, $height);
+                    @include font(10px, null, $height);
+                    text-align: center;
                 }
                 .input {
                     line-height: $height;
-                    text-align: left;
 
                     .text {
                         @media only screen and (min-width: 160px) {
@@ -278,6 +286,122 @@ $pageOffset: 70px; // 70px for transition bounce down more
                     background-color: #dd4b39;
                 }
             }
+        }
+
+        div.authDivider {
+            max-width: 300px;
+            margin: 20px auto;
+
+            div.or {
+                float: left;
+            }
+            div.divider {
+                width: 27%;
+                height: 1px;
+                margin-top: 12px;
+                background: #ddd;
+            }
+            div.or {
+                width: 46%;
+                font-size: 12px;
+                text-align: center;
+            }
+            div.clear {
+                clear: both;
+            }
+        }
+
+        div.input {
+            width: 230px;
+            margin: 0 auto;
+
+            input {
+                @include dimenBox(230px, null, 0 auto 20px, null, 0);
+                background-color: transparent;
+                border-bottom: 1px solid rgba(255, 255, 255, .75);
+                color: #fff;
+            }
+            ::-webkit-input-placeholder {
+                color: rgba(255, 255, 255, .6);
+            }
+        }
+    }
+
+    div.footer {
+        @include position(null, null, 20px, 20px);
+        position: fixed;
+
+        .text {
+            display: inline;
+            font-size: 11px;
+        }
+        .button {
+            @include font(13px, #fff, 15px, bold);
+            @include boxModel(null, 5px 0, null, 5px);
+            padding: 5px 10px;
+            display: inline;
+            text-align: center;
+            background-color: rgba(255, 255, 255, .3);
+        }
+    }
+
+    @media only screen and (orientation: portrait) {
+        div.logo {
+            @include position(0, initial, initial, initial);
+            width: 330px;
+            margin-left: 6px;
+            
+            .icon-IZCircle {
+                margin-right: 12px;
+                float: left;
+            }
+        }
+    }
+    @media only screen and (orientation: landscape) {
+        div.authOptions {
+            left: inherit;
+            right: 40px;
+        }
+        div.footer {}
+    }
+    @media only screen and (min-width: 480px) {
+        div.authOptions {
+            width: 260px;
+            
+            div.withServices {
+                margin: 10px auto;
+
+                .inputWrap .input {
+                    width: 150px;
+
+                    .text {
+                        font-size: 13px;
+                    }
+                }
+            }
+            div.authDivider {
+                div.authDivider {
+                    margin: 10px auto;
+                }
+                div.or {
+                    font-size: 10px;
+                }
+            }
+            div.input input {
+                font-size: 15px;
+            }
+        }
+    }
+    @media only screen and (min-height: 320px) {
+        div.authOptions {
+            right: 8px;
+
+            div.authDivider {
+                margin: 10px auto;
+            }
+        }
+        div.footer {
+            @include position(null, null, 10px, 10px);
         }
     }
 }
